@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>41.1.0</version>
+			<version>41.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
