@@ -1,3 +1,5 @@
+- Refactor: Make compatible with latest academic-core
+
 7.2.0 (28-06-2023)
 - Refactor: Make compatible with latest academic-core and academic-extensions 
 - Refactor: Remove deprecated execution course pages overrides and services
